--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
   <div class="container">
+    <h4>See your age on other planets!</h4>
+    <img src="../assets/images/solar-system.jpg" alt="solar-system">
   </div>
 </body>
 </html>
