--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>Age Calculator</title>
 </head>
 <body>
   <div class="container">
     <h4>See your age on other planets!</h4>
-    <!-- <img src="../assets/images/solar-system.jpg" alt="solar-system"> -->
+    <img src="./assets/images/solar-system.jpg" alt="solar-system">
   </div>
 </body>
 </html>
