add some jquery to index.js, add places to display information on index.html, change styling in css, update readme

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,29 @@
 <body>
   <div class="container">
     <h4>See your age on other planets!</h4>
-    <img src="./assets/images/solar-system.jpg" alt="solar-system">
+    <div class="form-group">
+      <form id="age">
+        <input id="age-input" type="text" placeholder="Enter your age here!">
+      </form>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h5>Mercury:</h5>
+        <p id="mercury-out"></p>
+      </div>
+      <div class="col">
+        <h5>Venus:</h5>
+        <p id="venus-out"></p>
+      </div>
+      <div class="col">
+        <h5>Mars:</h5>
+        <p id="mars-out"></p>
+      </div>
+      <div class="col">
+        <h5>Jupiter:</h5>
+        <p id="jupiter-out"></p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
