change tags for paragraphs on index.html, add output jquery on index.js

--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,19 @@
     <div class="row">
       <div class="col">
         <h5>Mercury:</h5>
-        <p id="mercury-out"></p>
+        <p id="mercuryAge-out"></p>
       </div>
       <div class="col">
         <h5>Venus:</h5>
-        <p id="venus-out"></p>
+        <p id="venusAge-out"></p>
       </div>
       <div class="col">
         <h5>Mars:</h5>
-        <p id="mars-out"></p>
+        <p id="marsAge-out"></p>
       </div>
       <div class="col">
         <h5>Jupiter:</h5>
-        <p id="jupiter-out"></p>
+        <p id="jupiterAge-out"></p>
       </div>
     </div>
   </div>
